--- a/src/cwatch.vcxproj
+++ b/src/cwatch.vcxproj
@@ -140,10 +140,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="log.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Watcher.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ansi_colors.h" />
+    <ClInclude Include="log.h" />
     <ClInclude Include="Watcher.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
