--- a/src/cwatch.vcxproj.filters
+++ b/src/cwatch.vcxproj.filters
@@ -21,9 +21,18 @@
     <ClCompile Include="Watcher.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="log.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Watcher.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="log.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ansi_colors.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
